RESOLVED FIXED310776
[Swift in WebKit] Non-PAL targets should not access the internal PAL Swift bridging header (part 5)
https://bugs.webkit.org/show_bug.cgi?id=310776
Summary [Swift in WebKit] Non-PAL targets should not access the internal PAL Swift br...
Richard Robinson
Reported 2026-03-25 23:16:36 PDT
.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-25 23:16:44 PDT
Richard Robinson
Comment 2 2026-03-25 23:17:32 PDT
EWS
Comment 3 2026-03-27 13:21:30 PDT
Committed 310102@main (2b31bb8e0628): <https://commits.webkit.org/310102@main> Reviewed commits have been landed. Closing PR #61381 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.