Source/WebCore/crypto/keys/CryptoKeyEC.h
@@ -31,12 +31,12 @@
 #include <wtf/Platform.h>
 #if OS(DARWIN) && !PLATFORM(GTK)
 #include <WebCore/CommonCryptoUtilities.h>
-namespace pal {
-class ECKey;
-}
+
+#include <pal/crypto/CryptoTypes.h>
+#include <pal/crypto/PlatformECKey.h>
 
 namespace WebCore {
-using PlatformECKeyContainer = UniqueRef<pal::ECKey>;
+using PlatformECKeyContainer = PAL::Crypto::PlatformECKey;
 }
 #endif
 
@@ -61,11 +61,7 @@ template<typename> class ExceptionOr;
 
 class CryptoKeyEC final : public CryptoKey {
 public:
-    enum class NamedCurve : uint8_t {
-        P256,
-        P384,
-        P521,
-    };
+    using NamedCurve = PAL::Crypto::ECNamedCurve;
 
     static Ref<CryptoKeyEC> create(CryptoAlgorithmIdentifier identifier, NamedCurve curve, CryptoKeyType type, PlatformECKeyContainer&& platformKey, bool extractable, CryptoKeyUsageBitmap usages)
     {
